--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(notagame CXX)
 
-file(GLOB SRC src/*.cpp )
+file(GLOB SRC src/*.cpp src/gl/*.cpp)
 
 add_executable(notagame ${SRC})
 target_include_directories(notagame PUBLIC include)
@@ -9,4 +9,4 @@ target_link_libraries(notagame PUBLIC glfw GL GLEW)
 target_include_directories(notagame PUBLIC ${CMAKE_BINARY_DIR})
 target_compile_features(notagame PUBLIC cxx_std_17)
 configure_file(config.hpp.in config.hpp @ONLY)
-target_compile_options(notagame PUBLIC -Wall -Wextra -Wconversion -Werror)
+target_compile_options(notagame PUBLIC -Wall -Wextra -Wconversion -Werror )#-Wpedantic)
