C++20 and pedantic warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ file(GLOB SRC src/*.cpp src/gl/*.cpp)
 add_executable(notagame ${SRC})
 target_include_directories(notagame PUBLIC include)
 target_link_libraries(notagame PUBLIC glfw GL GLEW)
-target_compile_features(notagame PUBLIC cxx_std_17)
-target_compile_options(notagame PUBLIC -Wall -Wextra -Wconversion -Werror )#-Wpedantic)
+target_compile_features(notagame PUBLIC cxx_std_20)
+target_compile_options(notagame PUBLIC -Wall -Wextra -Wconversion -Werror -Wpedantic)
