Add file dialog to choose image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,22 @@ file(GLOB IMGUI_SOURCES
     third_party/imgui/*.cpp
     third_party/imgui/backends/imgui_impl_glfw.cpp
     third_party/imgui/backends/imgui_impl_opengl3.cpp
-    )
+)
+file(GLOB IMGUI_FILE_DIALOG_SOURCES
+    third_party/ImGuiFileDialog/*.cpp
+)
 
 add_subdirectory(third_party/glm)
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(GLEW REQUIRED)
 
-add_executable(opengl_demo ${SOURCES} ${IMGUI_SOURCES})
-
+add_executable(opengl_demo ${SOURCES} ${IMGUI_SOURCES} ${IMGUI_FILE_DIALOG_SOURCES})
 target_include_directories(opengl_demo PRIVATE
     include
     third_party/imgui
     third_party/imgui/backends
-    third_party/glm
+    third_party/ImGuiFileDialog
 )
 target_link_libraries(opengl_demo PRIVATE glfw OpenGL::GL GLEW::GLEW glm)
 target_compile_features(opengl_demo PRIVATE cxx_std_20)
