--- a/imgui.ini
+++ b/imgui.ini
@@ -10,3 +10,11 @@ Size=550,680
 Pos=48,65
 Size=320,142
 
+[Window][Choose Image##LoadImageKey]
+Pos=60,57
+Size=1049,608
+
+[Table][0xFCD7AFCF,4]
+RefScale=18
+Column 0  Sort=0v
+
